--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "author": "Sworder",
   "license": "GPL-3.0",
   "dependencies": {
-    "discord.js": "^11.3.2",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5"
   },
-  "repository": "TheShooter71/dbfr-api",
+  "repository": "jorisvideo/dbfr-api",
   "bugs": {
-    "url": "https://github.com/TheShooter71/dbfr-api/issues"
+    "url": "https://github.com/jorisvideo/dbfr-api/issues"
   },
-  "homepage": "https://github.com/TheShooter71/dbfr-api#readme"
+  "homepage": "https://github.com/jorisvideo/dbfr-api#readme"
 }
